@@ -25,5 +25,5 @@ ARTIFACT_TYPE               = plug
 ARTIFACT_DESC               = Linux Studio Plugins
 ARTIFACT_HEADERS            = lsp-plug.in
 ARTIFACT_EXPORT_HEADERS     = 0
-ARTIFACT_VERSION            = 1.2.25-devel
+ARTIFACT_VERSION            = 1.2.25
 
